--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Excel-Filters/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-    <script type="module" crossorigin src="/Excel-Filters/assets/index.d57ce8fb.js"></script>
-    <link rel="stylesheet" href="/Excel-Filters/assets/index.3fce1f81.css">
-  </head>
-  <body>
-    <div id="root"></div>
-    
-  </body>
+
+<head>
+  <link href="https://unpkg.com/@csstools/normalize.css" rel="stylesheet" />
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/Excel-Filters/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vite + React + TS</title>
+  <script type="module" crossorigin src="/Excel-Filters/assets/index.82ab5c90.js"></script>
+  <link rel="stylesheet" href="/Excel-Filters/assets/index.e7a9c294.css">
+</head>
+
+<body>
+  <div id="root"></div>
+  
+</body>
+
 </html>
