--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/Excel-Filters/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React + TS</title>
+  <title>Excel Filters</title>
   <script type="module" crossorigin src="/Excel-Filters/assets/index.b6efc377.js"></script>
   <link rel="stylesheet" href="/Excel-Filters/assets/index.4dc370a7.css">
 </head>
