--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <link href="https://unpkg.com/@csstools/normalize.css" rel="stylesheet" />
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/Excel-Filters/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Excel Filters</title>
   <script type="module" crossorigin src="/Excel-Filters/assets/index.044faf38.js"></script>
